[gd_scene load_steps=3 format=3 uid="uid://dowg1643af372"]

[ext_resource type="Texture2D" uid="uid://bepf2xkcu5bov" path="res://assets/textures/hud/yellow_dot.png" id="1"]
[ext_resource type="Script" uid="uid://mi0xm7fb6sap" path="res://src/television/score_displays/USOpenScorePanel.gd" id="2"]

[node name="PlayerScorePanel" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("2")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 100.0
offset_bottom = 20.0

[node name="Panel" type="Panel" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer11" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Ranking" type="Label" parent="MarginContainer/HBoxContainer11"]
layout_mode = 2
size_flags_vertical = 1
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Name" type="Label" parent="MarginContainer/HBoxContainer11"]
layout_mode = 2
text = "Djokovic"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Country" type="Label" parent="MarginContainer/HBoxContainer11"]
layout_mode = 2
text = "SRB"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ServeIndicator" type="TextureRect" parent="MarginContainer/HBoxContainer11"]
layout_mode = 2
texture = ExtResource("1")
expand_mode = 1
stretch_mode = 6

[node name="MarginContainer2" type="MarginContainer" parent="."]
layout_mode = 0
offset_left = 120.0
offset_right = 34.0
offset_bottom = 20.0

[node name="Panel2" type="Panel" parent="MarginContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer12" type="HBoxContainer" parent="MarginContainer2"]
layout_mode = 2

[node name="Games1" type="Label" parent="MarginContainer2/HBoxContainer12" groups=["GamesLabel"]]
layout_mode = 2
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Games2" type="Label" parent="MarginContainer2/HBoxContainer12" groups=["GamesLabel"]]
visible = false
layout_mode = 2
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Games3" type="Label" parent="MarginContainer2/HBoxContainer12" groups=["GamesLabel"]]
visible = false
layout_mode = 2
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Games4" type="Label" parent="MarginContainer2/HBoxContainer12" groups=["GamesLabel"]]
visible = false
layout_mode = 2
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Games5" type="Label" parent="MarginContainer2/HBoxContainer12" groups=["GamesLabel"]]
visible = false
layout_mode = 2
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Panel2" type="Panel" parent="MarginContainer2/HBoxContainer12"]
layout_mode = 2

[node name="Points" type="Label" parent="MarginContainer2/HBoxContainer12/Panel2" groups=["GamesLabel"]]
layout_mode = 0
offset_right = 20.0
offset_bottom = 17.0
text = "0"
horizontal_alignment = 1
vertical_alignment = 1
